--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,6 +80,7 @@
 
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="settings">Settings</string>
+    <string name="nav_projects">Projects</string>
     <string name="nav_title_app">App</string>
     <string name="nav_item_settings">Settings</string>
     <string name="nav_title_exit">Exit</string>
