--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,5 @@
     <string name="nav_title_app">App</string>
     <string name="nav_item_settings">Settings</string>
     <string name="nav_title_exit">Exit</string>
+    <string name="load_videos">load the list of videos</string>
 </resources>
