--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="search">Search</string>
     <string name="empty">Empty</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="network_fail">Network fail</string>
 
     <!-- Strings related to Settings -->
 
